Fixed styling added more dark mode layout, changed position items in header, changed font and text

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 @import "tailwindcss";
 
 body {
-  background-color: var(--color-gray-100);
+  background-color: var(--color-gray-900);
 }
